--- a/terraform/ansible/inventory.ini
+++ b/terraform/ansible/inventory.ini
@@ -1,2 +1,2 @@
 [servers]
-13.232.199.87  ansible_user=ubuntu ansible_ssh_private_key_file=/Users/prabal/Downloads/developer.pem
+{{ public_ip }} ansible_user=ubuntu ansible_ssh_private_key_file=/Users/prabal/Downloads/developer.pem
