--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,11 +26,11 @@ jobs:
           aws-region: ap-south-1
 
       - name: Terraform apply
-        run: cd Terraform && terraform apply -auto-approve
+        run: cd terraform && terraform apply -auto-approve
 
 
       - name: Save inventory
-        run: cat Terraform/inventory.ini > inventory.ini
+        run: cat terraform/inventory.ini > inventory.ini
 
       - name: Upload inventory file
         uses: actions/upload-artifact@v4
