--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+  workflow_dispatch:
 
 jobs:
   terraform:
@@ -30,7 +31,7 @@ jobs:
 
 
       - name: Save inventory
-        run: cat terraform/inventory.ini > inventory.ini
+        run: cat terraform/ansible/inventory.ini > inventory.ini
 
       - name: Upload inventory file
         uses: actions/upload-artifact@v4
